Bug 487539.  Don't use an <area>'s primary frame as a primary frame hint.  r+sr=roc